--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/dndcharlist
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.datasource.driver-class-name=org.postgresql.Driver
