--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
+#server.port=8080
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/dndcharlist
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.main.allow-circular-references=true
