--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,14 @@
 			<artifactId>json</artifactId>
 			<version>20230618</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.32.1</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
