--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
 			<artifactId>json</artifactId>
 			<version>20230618</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.32.1</version>
+		</dependency>
 
 
 	</dependencies>
