--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.main.allow-circular-references=true
+spring.jpa.open-in-view=true
